--- a/src/app/pages/rtl/rtl.component.html
+++ b/src/app/pages/rtl/rtl.component.html
@@ -20,18 +20,19 @@
                       <th *ngFor="let col of columns" [ngStyle]="{'width': col.width}">
                           {{col.header}}
                       </th>
+                      <th></th>
                   </tr>
               </ng-template>
               <ng-template pTemplate="body" let-rowData let-columns="columns" >
                   <tr>
                       <td *ngFor="let col of columns">
-                          <!-- <ng-container *ngIf="[col.field]=='ngaythue' || [col.field]=='ngaytra'">
+                        <ng-container *ngIf="[col.field]=='ngaytra'">
                           {{rowData[col.field] | date: 'dd/MM/yyyy'}}
                         </ng-container>
                         
-                        <ng-container *ngIf="[col.field]!='ngaythue'&&[col.field]!='ngaytra' &&[col.field]!='trangthai'">
+                        <!-- <ng-container *ngIf="[col.field]!='ngaythue'&&[col.field]!='ngaytra' &&[col.field]!='trangthai'">
                             {{rowData[col.field]}}
-                        </ng-container> -->
+                        </ng-container>  -->
 
                         <!-- <ng-container *ngIf="[col.field]=='trangthai'">
                             <ng-container *ngIf="rowData[col.field]==false">
@@ -43,7 +44,7 @@
                                 <span><i class="fa fa-circle icon icon-blue" style="color: green;"></i></span>
                             </ng-container>
                         </ng-container> -->
-                        <ng-container *ngIf="[col.field]!='facebook' ">
+                        <ng-container *ngIf="[col.field]!='facebook' && [col.field]!='ngaytra' ">
                           {{rowData[col.field]}}
                       </ng-container>
 
@@ -52,7 +53,11 @@
                         
                       </ng-container>
                       </td>
-                     
+                      <td style="text-align:center">
+                        <a (click)="selectNetWithButton(rowData)" routerLink="/user"
+                            [state]="(rowData)"><i class="fas fa-address-card"
+                                style="font-size:20px"></i></a>
+                    </td>
                      
                   </tr>
               </ng-template>
