--- a/src/app/pages/wifi/wifi.component.html
+++ b/src/app/pages/wifi/wifi.component.html
@@ -21,6 +21,12 @@
                           <i class="fa fa-search" style="margin:4px 4px 4px 4px"></i>
                       </div>
                   </ng-template> -->
+                  <ng-template pTemplate="caption">
+                    <div style="text-align: left">  
+                          <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 0.5em;" class="ui-button-success"></button>
+          
+                    </div>
+                </ng-template>
                             <ng-template pTemplate="header" let-columns class=" text-primary">
 
                                 <tr>
