--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -5,16 +5,24 @@
         <div class=" card">
           <div class=" card-header">
             <h4 class=" card-title">Danh Sách KH Hủy</h4>
+
+            <div style="text-align: left">  
+              <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 15px;" class="ui-button-success"></button>
+              <input pInputText type="text" placeholder="Mã WiFi" style="margin-right: 15px; height: 30px; margin-bottom: 15px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+                 
+              <input pInputText type="text"  placeholder="Họ Tên" style="margin-right: 15px; height: 30px; margin-bottom: 15px;" (input)="tt.filter($event.target.value, 'hoten', 'contains')">
+     
+        </div>
+        
           </div>
+          
           <div class=" card-body">
-            <div class=" table-responsive">
-              <p-table  #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="8" [tableStyle]="{'table-layout':'auto'}" >
-                  <ng-template pTemplate="caption">
-                      <div style="text-align: left">  
-                            <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 0.5em;" class="ui-button-success"></button>
             
-                      </div>
-                  </ng-template>
+            <div class=" table-responsive">
+              <p-table  #tt [columns]="cols" [value]="data" [paginator]="true" [rows]="20" [tableStyle]="{'table-layout':'auto'}" >
+                  <!-- <ng-template pTemplate="caption">
+                     
+                  </ng-template> -->
                 <ng-template pTemplate="header" let-columns class=" text-primary">
                     <tr >
                         <th *ngFor="let col of columns" [ngStyle]="{'width': col.width}">
